--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -129,7 +129,7 @@ format-volume-prefix-font =
 
 font-0 = "Iosevka Nerd Font:size=14;3"
 font-1 = "Iosevka Nerd Font:bold:size=12;2"
-font-2 = "Iosevka Nerd Font:size=15;0"
+font-2 = "Iosevka Nerd Font:size=15;3"
 font-3 = "Source Han Sans CN:size=12;2"
 font-4 = "Iosevka Nerd Font:bold:size=14;2"
 font-5 = "Iosevka Nerd Font:size=18;5"
@@ -560,10 +560,10 @@ bar-used-empty-font = 2
 [module/RAM]
 type = custom/text
 
-content = "RAM "
+content = "  "
 content-foreground = ${color.my_black}
 content-background = ${color.my_yellow}
-content-font = 2
+content-font = 5
 # content-overline = ${color.my_bg}
 # content-underline = ${color.my_bg}
 
@@ -574,10 +574,11 @@ click-left =  alacritty -T 悬浮窗口 &
 type = internal/xworkspaces
 
 format = <label-state>
-format-font = 5
+# format-font = 5
 
 # label-active = "|%{F#43A047} %{F-}%name%| "
 label-active = " %name% "
+label-active-font = 3
 # label-active-underline = ${color.my_bg}
 # label-active-overline = ${color.my_bg}
 
@@ -585,6 +586,7 @@ label-active-background = ${color.my_green}
 label-active-foreground = ${color.black}
 
 label-occupied = "%{F#757575} %{F-}%name% "
+label-occupied-font = 2
 # label-occupied-overline = ${color.my_bg}
 # label-occupied-underline = ${color.my_bg}
 
@@ -689,7 +691,7 @@ label-unmounted = Not Mounted
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL:"
+format-volume-prefix = " "
 format-volume-prefix-font =  2
 format-volume-prefix-foreground = ${color.lime}
 format-volume-prefix-background = ${color.my_pink}
@@ -826,9 +828,10 @@ thermal-zone = 0
 ; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
 ; to find path to desired file
 ; Default reverts to thermal zone setting
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon4/temp2_input
-base-temperature = 20
-warn-temperature = 80
+hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon5/temp1_input
+# hwmon-path = /sys/devices/virtual/thermal/thermal_zone0/hwmon1/temp1_input
+base-temperature = 0
+warn-temperature = 70
 
 format=<label>
 label =   %temperature-c%
@@ -839,6 +842,7 @@ label-font = 2
 label-warn =    %temperature-c%
 label-warn-foreground = ${color.red}
 label-warn-background = ${color.my_tem}
+label-warn-font = 2
 [module/round-left]
 type = custom/text
 
