a update after fonts reinstalled

--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -119,7 +119,6 @@ module-margin-right = 0
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ; F 2onts are defined using <font-name>;<vertical-offset>
-format-volume-prefix-font = 
 ; Font names are specified using a fontconfig pattern.
 ;   font-0 = NotoSans-Regular:size=8;2
 ;   font-1 = MaterialIcons:size=10
@@ -127,14 +126,18 @@ format-volume-prefix-font =
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Iosevka Nerd Font:size=14;3"
-font-1 = "Iosevka Nerd Font:bold:size=12;2"
-font-2 = "Iosevka Nerd Font:size=15;3"
+;font-1
+font-0 = "Iosevka Nerd Font:size=14;0"
+font-1 = "Iosevka Nerd Font:bold:size=11;4"
+font-2 = "Iosevka Nerd Font:size=16;3"
 font-3 = "Source Han Sans CN:size=12;2"
-font-4 = "Iosevka Nerd Font:bold:size=14;2"
-font-5 = "Iosevka Nerd Font:size=18;5"
-font-6 = "JetBrainsMono Nerd Font:size=19;3"
-font-7 = "Iosevka Nerd Font:size=2;0"
+font-4 = "Iosevka Nerd Font:bold:size=7;2"
+font-5 = "Iosevka Nerd Font:size=16;4"
+font-6 = "Iosevka Nerd Font:size=19;4"
+;font-8
+font-7 = "Iosevka Nerd Font:size=20;0"
+;font for pulseaudio
+font-8 = "Iosevka Nerd Font:size=15;3"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -149,7 +152,7 @@ inherit = bar/main
 bottom = False
 
 width = 100%
-height = 28
+height = 25
 
 background = ${color.my_bg}
 # background = ${color.trans}
@@ -560,10 +563,10 @@ bar-used-empty-font = 2
 [module/RAM]
 type = custom/text
 
-content = "  "
+content = " "
 content-foreground = ${color.my_black}
 content-background = ${color.my_yellow}
-content-font = 5
+content-font = 6
 # content-overline = ${color.my_bg}
 # content-underline = ${color.my_bg}
 
@@ -621,7 +624,7 @@ speed-unit=
 
 format-connected = <label-connected>
 format-connected-font = 2
-label-connected ="%{T2} %upspeed:6%   %downspeed:6%%{T-}"
+label-connected ="%{T2}%upspeed:6%  %downspeed:6%%{T-}"
 # label-connected ="  %downspeed:8%"
 # label-connected = "   %downspeed%%{A}"
 # format-connected-underline = ${color.my_bg}
@@ -691,15 +694,16 @@ label-unmounted = Not Mounted
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = " "
-format-volume-prefix-font =  2
+format-volume-prefix = ""
+format-volume-prefix-font =  9
 format-volume-prefix-foreground = ${color.lime}
 format-volume-prefix-background = ${color.my_pink}
 # format-volume-prefix-overline = ${color.my_bg}
 # format-volume-prefix-underline = ${color.my_bg}
 format-volume = <label-volume>
 
-label-volume = %percentage:3%%
+label-volume = %percentage:2%%
+label-volume-font = 9
 format-volume-background = ${color.my_pink}
 # format-volume-overline = ${color.my_bg}
 # format-volume-underline = ${color.my_bg}
@@ -709,7 +713,7 @@ format-muted-foreground = ${color.black}
 # label-muted-overline   = ${color.my_bg}
 # label-muted-underline   = ${color.my_bg}
 format-muted-background = ${color.my_pink}
-format-muted-font = 2
+format-muted-font = 9
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/volume_bar]
@@ -726,7 +730,7 @@ bar-volume-gradient = true
 
 bar-volume-indicator = ▶
 bar-volume-indicator-foreground = ${color.white}
-bar-volume-indicator-font = 4
+bar-volume-indicator-font = 9
 
 bar-volume-fill = ─
 # bar-volume-fill = |
@@ -739,12 +743,12 @@ bar-volume-foreground-5 = ${color.amber}
 bar-volume-foreground-6 = ${color.amber}
 bar-volume-foreground-7 = ${color.red}
 bar-volume-foreground-8 = ${color.red}
-bar-volume-fill-font = 5
+bar-volume-fill-font = 9
 
 # bar-volume-empty = ⏽
 bar-volume-empty = ─
 bar-volume-empty-foreground = ${color.gray}
-bar-volume-empty-font = 5
+bar-volume-empty-font = 9
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/bluetooth]
@@ -834,12 +838,12 @@ base-temperature = 0
 warn-temperature = 70
 
 format=<label>
-label =   %temperature-c%
+label =  %temperature-c%
 label-foreground = ${color.tem}
 label-background = ${color.my_tem}
 label-font = 2
 
-label-warn =    %temperature-c%
+label-warn =   %temperature-c%
 label-warn-foreground = ${color.red}
 label-warn-background = ${color.my_tem}
 label-warn-font = 2
@@ -931,7 +935,7 @@ content-foreground = ${color.my_wifi}
 [module/round-left-wifi]
 type = custom/text
 
-content = %{T6}%{T-}
+content = 
 content-font = 6
 content-foreground = ${color.my_wifi}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
