--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -22,7 +22,7 @@ env:
 window:
   # Window dimensions (changes require restart)
   #
-  opacity: 0.85
+  opacity: 0.86
   # Specified in number of columns/lines, not pixels.
   # If both are `0`, this setting is ignored.
   dimensions:
@@ -42,8 +42,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 2
-    y: 2
+    x: 0
+    y: 0
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: false
@@ -101,8 +101,11 @@ font:
     #   - (Windows) Consolas
     #     family: Inconsolata Nerd Font
     #     family: Intel One Mono
-    family: JetBrainsMonoNL Nerd Font
-    style: Medium 
+    #     family: JetBrainsMono Nerd Font
+    #     family: FiraCode Nerd Font
+    #     family: Fixedsys Excelsior
+    family: FiraCode Nerd Font
+    style: thin
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -200,7 +203,7 @@ colors:
     white:   '0xe6e6e6'
   
 
-visual_bell:
+bell:
   animation: EaseOutExpo
   duration: 0
 
