--- a/config/i3/config
+++ b/config/i3/config
@@ -38,6 +38,7 @@ font pango:monospace 10
 # bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 # bindsym $mod+p       exec --no-startup-id ~/.config/polybar/launch.sh --pwidgets
 bindsym $mod+Shift+p       exec --no-startup-id killall polybar
+bindsym $mod+p exec --no-startup-id killall polybar;exec --no-startup-id ~/.config/polybar/launch.sh --pwidgets
 bindsym $mod+Shift+b exec --no-startup-id blueman-manager
 bindsym $mod+t       exec --no-startup-id pcmanfm
 bindsym $mod+c       exec --no-startup-id google-chrome-stable
@@ -121,7 +122,7 @@ for_window [title="EmojiFloatWnd"] floating enable
 
 for_window [title="quick_ranger"] floating enable, resize set 1400 700,  move left 250 px, move up 100 px
 
-for_window [title="quick_terminal"] floating enable, resize set 1900 500,  move left 550 px, move up 258 px , sticky enable
+for_window [title="quick_terminal"] floating enable, resize set 1400 500,  move left 250 px, move up 258 px , sticky enable
 
 for_window [class="Pcmanfm"] floating enable, border pixel 3, gaps inner plus 10
 
@@ -149,7 +150,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return  exec "alacritty" split toggle  
+bindsym $mod+Return  exec "alacrittyal" split toggle  
 bindsym $control+Return  exec "alacritty -T quick_terminal"
 
 # kill focused window
@@ -344,7 +345,7 @@ bindsym $mod+Shift+w exec --no-startup-id rofi -modi "window" -show window -conf
 bindsym $mod+i exec --no-startup-id dunstctl close
 bindsym $mod+Shift+i exec --no-startup-id dunstctl history-pop
 bindsym $mod+u exec --no-startup-id variety -n
-bindsym $mod+p exec --no-startup-id gpaste-client ui
+# bindsym $mod+p exec --no-startup-id gpaste-client ui
 bindsym $mod+b exec --no-startup-id ~/.config/scripts/my_picom
 bindsym $mod+n exec --no-startup-id ~/.config/scripts/picom
 # bindsym $mod+Shift+m exec --no-startup-id killall picom; picom 
