--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -128,7 +128,7 @@ module-margin-right = 0
 
 ;font-1
 font-0 = "Iosevka Nerd Font:size=14;0"
-font-1 = "Iosevka Nerd Font:bold:size=11;4"
+font-1 = "Iosevka Nerd Font:bold:size=11;5"
 font-2 = "Iosevka Nerd Font:size=16;3"
 font-3 = "Source Han Sans CN:size=12;2"
 font-4 = "Iosevka Nerd Font:bold:size=7;2"
@@ -152,7 +152,7 @@ inherit = bar/main
 bottom = False
 
 width = 100%
-height = 25
+height = 24
 
 background = ${color.my_bg}
 # background = ${color.trans}
@@ -163,8 +163,8 @@ border-right-size = 0
 border-top-size = 8 
 # border-bottom-color = ${color.black}
 
-radius-bottom = 15
-radius-top = 15
+radius-bottom = 0
+radius-top = 0
 
 module-margin-right  = 0
 module-margin-left   = 0
@@ -176,8 +176,8 @@ enable-ipc = true
 fixed-center = true
 
 modules-left = space round-left-date date round-right-date space round-left-tem temperature round-right-tem space round-left-cpu CPU cpu cpu_bar round-right-cpu space round-left-ram RAM memory memory_bar round-right-ram small_space
-modules-center = small_space round-left name 2space_second title 2space_second i3 round-right small_space 
-modules-right = small_space round-left-vol pulseaudio volume_bar round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space  round-left-purple 
+modules-center = small_space round-left name 2space_second title i3 round-right
+modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space  round-left-purple 
 
 underline-size = 3
 overline-size = 4
@@ -365,10 +365,9 @@ time = " %k:%M"
 time-alt = " %y-%m-%d %k:%M:%S"
 
 format = <label>
-format-padding = 0
 format-foreground = ${color.my_black}
 format-background = ${color.my_purple}
-label = %time%
+label = "%time%"
 # label-overline = ${color.my_bg}
 # label-underline = ${color.my_bg}
 label-font = 2
@@ -455,7 +454,7 @@ format = <label>
 format-foreground = ${color.white}
 format-background = ${color.my_blue}
 format-font = 2
-label = %percentage:2%%
+label = %percentage:3%%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -472,9 +471,9 @@ format-background = ${color.my_blue}
 bar-load-width = 10
 bar-load-gradient = true
 
-bar-load-indicator = 
-bar-load-indicator-foreground = ${color.ac}
-bar-load-indicator-font = 1
+bar-load-indicator = |
+bar-load-indicator-foreground = ${color.white}
+bar-load-indicator-font = 2
 
 bar-load-fill = |
 bar-load-foreground-0 = ${color.white}
@@ -497,7 +496,7 @@ bar-load-empty-font = 2
 [module/CPU]
 type = custom/text
 
-content =" "
+content =""
 content-foreground = ${color.deep-purple}
 # content-background = ${color.gray}
 content-background = ${color.my_blue}
@@ -540,7 +539,6 @@ bar-used-gradient = true
 
 bar-used-indicator = 
 bar-used-indicator-foreground = ${color.ac}
-bar-used-indicator-font = 2
 
 bar-used-fill = |
 bar-used-foreground-0 = ${color.white}
@@ -580,20 +578,21 @@ format = <label-state>
 # format-font = 5
 
 # label-active = "|%{F#43A047} %{F-}%name%| "
-label-active = " %name% "
-label-active-font = 3
+label-active = "%name%"
+label-active-font = 6
 # label-active-underline = ${color.my_bg}
 # label-active-overline = ${color.my_bg}
 
 label-active-background = ${color.my_green}
 label-active-foreground = ${color.black}
 
-label-occupied = "%{F#757575} %{F-}%name% "
-label-occupied-font = 2
+# label-occupied = "%{F#757575}%{F-}%name% "
+label-occupied = "%{F#757575}%{F-}%{F#757575}%name%%{F-}"
+label-occupied-font = 6
 # label-occupied-overline = ${color.my_bg}
 # label-occupied-underline = ${color.my_bg}
 
-label-occupied-foreground = ${color.black}
+label-occupied-foreground = ${color.yellow}
 label-occupied-background = ${color.my_green}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -610,6 +609,7 @@ format-foreground = ${color.my_black}
 format-font = 4
 
 label = %title%
+label-font = 4
 label-maxlen = 60
 label-empty = Desktop
 
@@ -694,28 +694,41 @@ label-unmounted = Not Mounted
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = ""
-format-volume-prefix-font =  9
-format-volume-prefix-foreground = ${color.lime}
-format-volume-prefix-background = ${color.my_pink}
-# format-volume-prefix-overline = ${color.my_bg}
-# format-volume-prefix-underline = ${color.my_bg}
 format-volume = <label-volume>
 
 label-volume = %percentage:2%%
-label-volume-font = 9
+label-volume-font = 3
 format-volume-background = ${color.my_pink}
 # format-volume-overline = ${color.my_bg}
 # format-volume-underline = ${color.my_bg}
 
-format-muted = "VOL:"
-format-muted-foreground = ${color.black}
+format-muted = "MUTED"
+format-muted-foreground = ${color.my_white}
 # label-muted-overline   = ${color.my_bg}
 # label-muted-underline   = ${color.my_bg}
 format-muted-background = ${color.my_pink}
-format-muted-font = 9
+format-muted-font = 3
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+[module/pulseaudio-prefix]
+type = custom/text
+click-left = exec pulseaudio-ctl mute
+click-right = exec pulseaudio-ctl mute
+content = ""
+content-font = 3
+content-foreground = ${color.lime}
+content-background = ${color.my_pink}
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+# [module/pulseaudio]
+# type = custom/script
+# exec = /home/rongzi/volume.sh
+# interval = 1
+# click-left = exec pulseaudio-ctl mute
+# click-right = exec pulseaudio-ctl mute
+# format-font = 3
+# format-foreground = ${color.my_white}
+# format-background = ${color.my_pink}
+# ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/volume_bar]
 type = internal/pulseaudio
 
