--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -703,7 +703,7 @@ format-volume-background = ${color.my_pink}
 # format-volume-underline = ${color.my_bg}
 
 format-muted = "MUTED"
-format-muted-foreground = ${color.my_white}
+format-muted-foreground = ${color.white}
 # label-muted-overline   = ${color.my_bg}
 # label-muted-underline   = ${color.my_bg}
 format-muted-background = ${color.my_pink}
