add fzf function to vim

--- a/config/polybar/pwidgets/main_for_i3.ini
+++ b/config/polybar/pwidgets/main_for_i3.ini
@@ -1,3 +1,4 @@
+
 ;; ┌────────────────────────────────────────────────────────────┐
 ;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
 ;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
@@ -176,7 +177,7 @@ enable-ipc = true
 fixed-center = true
 
 modules-left = space round-left-date date round-right-date space round-left-tem temperature round-right-tem space round-left-cpu CPU cpu cpu_bar round-right-cpu space round-left-ram RAM memory memory_bar round-right-ram small_space
-modules-center = small_space round-left dwm 2space_second title round-right
+modules-center = small_space round-left name 2space_second title i3 round-right
 modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space  round-left-purple 
 
 underline-size = 3
@@ -578,8 +579,9 @@ format = <label-state>
 # format-font = 5
 
 # label-active = "|%{F#43A047} %{F-}%name%| "
+label-padding = 0
 label-active = "%name%"
-label-active-font = 6
+label-active-padding = 1
 # label-active-underline = ${color.my_bg}
 # label-active-overline = ${color.my_bg}
 
@@ -596,92 +598,92 @@ label-occupied-foreground = ${color.yellow}
 label-occupied-background = ${color.my_green}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-[module/dwm]
-type = internal/dwm
-format = <label-tags>
-format-font = 1
-; Path to dwm socket (default: /tmp/dwm.sock)
-; socket-path = /tmp/dwm.sock
-
-; Left-click to view tag, right-click to toggle tag view
-enable-tags-click = true
-; Scroll to cycle between available tags
-enable-tags-scroll = true
-; If true and enable-tags-scroll = true, scrolling will view all tags regardless if occupied
-tags-scroll-empty = true
-; If true and enable-tags-scroll = true, scrolling will cycle through tags backwards
-tags-scroll-reverse = true
-; If true and enable-tags-scroll = true, wrap active tag when scrolling
-tags-scroll-wrap = true
-; Left-click to set secondary layout, right-click to switch to previous layout
-enable-layout-click = true
-; Scroll to cycle between available layouts
-enable-layout-scroll = true
-; Wrap when scrolling and reaching beginning/end of layouts
-layout-scroll-wrap = true
-; Reverse scroll direction
-layout-scroll-reverse = true
-
-; If enable-layout-click = true, clicking the layout symbol will switch to this layout
-secondary-layout-symbol = [M]
-
-; Separator in between shown tags
-; label-separator = |
-
-; Title of currently focused window
-; Available tokens:
-;   %title%
-label-title = %title%
-label-title-padding = 0
-label-title-foreground = ${color.black}
-label-title-maxlen = 30
-
-; Defaults to 'Desktop'
-label-title-default = "Desktop"
-
-; Symbol of current layout
-; Available tokens:
-;   %symbol%
-label-layout = %symbol%
-label-layout-padding = 0
-label-layout-foreground = #000
-label-layout-background = ${color.my_green}
-
-; Text to show when currently focused window is floating
-label-floating = F
-
-; States: focused, unfocused, visible, urgent, empty
-; Available tokens:
-;   %name%
-
-; focused = Selected tag on focused monitor
-label-focused = " %name%"
-label-focused-foreground = ${color.black}
-label-focused-background = ${color.my_green}
-# label-focused-underline= ${color.primacwry}
-label-focused-padding = 1
-
-; unfocused = Unselected tag on unselected monitor
-label-unfocused = %{F#CCCCCC}%{F-}%{F#CCCCCC}%name%%{F-}
-label-unfocused-padding = 1
-
-; visible = Unselected tag, but occupied tag on any monitor
-label-visible = %{F#757575}%{F-}%{F#757575}%name%%{F-}
-label-visible-background = ${color.my_green}
-label-visible-underline = ${color.my_green}
-label-visible-padding = ${color.my_green}
-
-; urgent = Unselected tag with window that has urgency hint set
-label-urgent = %name%
-label-urgent-background = ${color.my_green}
-label-urgent-padding = 1
-
-; empty = Unselected and unoccupied tag
-; This can be set to an empty string to hide empty tags
-label-empty = 
-label-empty-background = ${color.my_green}
-label-empty-padding = 1
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+# [module/dwm]
+# type = internal/dwm
+# format = <label-tags>
+# format-font = 1
+# ; Path to dwm socket (default: /tmp/dwm.sock)
+# ; socket-path = /tmp/dwm.sock
+# 
+# ; Left-click to view tag, right-click to toggle tag view
+# enable-tags-click = true
+# ; Scroll to cycle between available tags
+# enable-tags-scroll = true
+# ; If true and enable-tags-scroll = true, scrolling will view all tags regardless if occupied
+# tags-scroll-empty = true
+# ; If true and enable-tags-scroll = true, scrolling will cycle through tags backwards
+# tags-scroll-reverse = true
+# ; If true and enable-tags-scroll = true, wrap active tag when scrolling
+# tags-scroll-wrap = true
+# ; Left-click to set secondary layout, right-click to switch to previous layout
+# enable-layout-click = true
+# ; Scroll to cycle between available layouts
+# enable-layout-scroll = true
+# ; Wrap when scrolling and reaching beginning/end of layouts
+# layout-scroll-wrap = true
+# ; Reverse scroll direction
+# layout-scroll-reverse = true
+# 
+# ; If enable-layout-click = true, clicking the layout symbol will switch to this layout
+# secondary-layout-symbol = [M]
+# 
+# ; Separator in between shown tags
+# ; label-separator = |
+# 
+# ; Title of currently focused window
+# ; Available tokens:
+# ;   %title%
+# label-title = %title%
+# label-title-padding = 0
+# label-title-foreground = ${color.black}
+# label-title-maxlen = 30
+# 
+# ; Defaults to 'Desktop'
+# label-title-default = "Desktop"
+# 
+# ; Symbol of current layout
+# ; Available tokens:
+# ;   %symbol%
+# label-layout = %symbol%
+# label-layout-padding = 0
+# label-layout-foreground = #000
+# label-layout-background = ${color.my_green}
+# 
+# ; Text to show when currently focused window is floating
+# label-floating = F
+# 
+# ; States: focused, unfocused, visible, urgent, empty
+# ; Available tokens:
+# ;   %name%
+# 
+# ; focused = Selected tag on focused monitor
+# label-focused = " %name%"
+# label-focused-foreground = ${color.black}
+# label-focused-background = ${color.my_green}
+# # label-focused-underline= ${color.primacwry}
+# label-focused-padding = 1
+# 
+# ; unfocused = Unselected tag on unselected monitor
+# label-unfocused = %{F#CCCCCC}%{F-}%{F#CCCCCC}%name%%{F-}
+# label-unfocused-padding = 1
+# 
+# ; visible = Unselected tag, but occupied tag on any monitor
+# label-visible = %{F#757575}%{F-}%{F#757575}%name%%{F-}
+# label-visible-background = ${color.my_green}
+# label-visible-underline = ${color.my_green}
+# label-visible-padding = ${color.my_green}
+# 
+# ; urgent = Unselected tag with window that has urgency hint set
+# label-urgent = %name%
+# label-urgent-background = ${color.my_green}
+# label-urgent-padding = 1
+# 
+# ; empty = Unselected and unoccupied tag
+# ; This can be set to an empty string to hide empty tags
+# label-empty = 
+# label-empty-background = ${color.my_green}
+# label-empty-padding = 1
+# ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/title]
 type = internal/xwindow
 
