--- a/config/i3/config
+++ b/config/i3/config
@@ -38,7 +38,7 @@ font pango:monospace 10
 # bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 # bindsym $mod+p       exec --no-startup-id ~/.config/polybar/launch.sh --pwidgets
 bindsym $mod+Shift+p       exec --no-startup-id killall polybar
-bindsym $mod+p exec --no-startup-id killall polybar;exec --no-startup-id ~/.config/polybar/launch.sh --pwidgets
+bindsym $mod+p exec --no-startup-id killall polybar;exec --no-startup-id ~/.config/polybar/pwidgets/launch i3 &
 bindsym $mod+Shift+b exec --no-startup-id blueman-manager
 bindsym $mod+t       exec --no-startup-id pcmanfm
 bindsym $mod+c       exec --no-startup-id google-chrome-stable 
@@ -297,6 +297,8 @@ client.background       #F8F8F2
 
 # workspace_auto_back_and_forth yes
 
+bindsym  XF86MonBrightnessUp exec --no-startup-id ~/.config/scripts/backlight 10
+bindsym  XF86MonBrightnessDown exec --no-startup-id ~/.config/scripts/backlight -10
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
 bindsym XF86AudioMute        exec --no-startup-id pactl set-sink-mute   @DEFAULT_SINK@ toggle
