git debug done, it seems fine

--- a/config/polybar/pwidgets/colors.ini
+++ b/config/polybar/pwidgets/colors.ini
@@ -18,7 +18,7 @@ my_red = #be97d8
 my_blue = #3399c8
 my_bg = #002c323c
 my_yellow = #ccab40
-my_green = #9ace96
+my_green = #8dbf73
 my_pink = #c08997
 my_wifi = #709bab
 my_fs = #050339
