make functions directory in .vim

--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -22,7 +22,7 @@ env:
 window:
   # Window dimensions (changes require restart)
   #
-  opacity: 0.99
+  opacity: 0.9
   # Specified in number of columns/lines, not pixels.
   # If both are `0`, this setting is ignored.
   dimensions:
@@ -211,6 +211,7 @@ bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
+background_opacity : 0.83
 
 # Mouse bindings
 #
