--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -364,10 +364,10 @@ interval = 1.0
 time = " %k:%M"
 time-alt = " %y-%m-%d %k:%M:%S"
 
-format = <label>
+format=<label>
 format-foreground = ${color.my_black}
 format-background = ${color.my_purple}
-label = "%time%"
+label="%time%"
 # label-overline = ${color.my_bg}
 # label-underline = ${color.my_bg}
 label-font = 2
@@ -568,7 +568,7 @@ content-font = 6
 # content-overline = ${color.my_bg}
 # content-underline = ${color.my_bg}
 
-click-left =  alacritty -T 悬浮窗口 &
+click-left =  alacrittyal -t 悬浮窗口 &
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/name]
