--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -135,7 +135,7 @@ font:
     style: Italic
 
   # Point size
-  size: 14
+  size: 13
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
@@ -177,6 +177,7 @@ font:
 colors:
   # Default colors
   primary:
+    #     background: '0x282a36'
     background: '0x282a36'
     foreground: '0xbfbfbf'
 
