bash scritps e.g. fzf tricks inspired by Missing Semister in mit

--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -568,7 +568,7 @@ content-font = 6
 # content-overline = ${color.my_bg}
 # content-underline = ${color.my_bg}
 
-click-left =  alacrittyal -t 悬浮窗口 &
+click-left =  ~/.config/scripts/alacritty
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/name]
