--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -22,7 +22,7 @@ env:
 window:
   # Window dimensions (changes require restart)
   #
-  opacity: 0.9
+  #   opacity: 0.9
   # Specified in number of columns/lines, not pixels.
   # If both are `0`, this setting is ignored.
   dimensions:
@@ -183,36 +183,52 @@ colors:
 
   # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xff5555'
-    green:   '0x50fa7b'
-    yellow:  '0xf1fa8c'
-    blue:    '0xcaa9fa'
-    magenta: '0xff79c6'
-    cyan:    '0x8be9fd'
-    white:   '0xbfbfbf'
+    #     black:   '0x000000'
+    #     red:     '0xff5555'
+    #     green:   '0x50fa7b'
+    #     yellow:  '0xf1fa8c'
+    #     blue:    '0xcaa9fa'
+    #     magenta: '0xff79c6'
+    #     cyan:    '0x8be9fd'
+    #     white:   '0xbfbfbf'
+    black:        '0x282c34'
+    white:        '0xabb2bf'
+    red:          '0xbe5046'
+    green:        '0x98c379'
+    yellow:       '0xe5c07b'
+    blue:         '0x61afef'
+    magenta:      '0xc678dd'
+    cyan:         '0x56b6c2'
 
   # Bright colors
   bright:
-    black:   '0x282a35'
-    red:     '0xff6e67'
-    green:   '0x5af78e'
-    yellow:  '0xf4f99d'
-    blue:    '0xcaa9fa'
-    magenta: '0xff92d0'
-    cyan:    '0x9aedfe'
-    white:   '0xe6e6e6'
+    #     black:   '0x282a35'
+    #     red:     '0xff6e67'
+    #     green:   '0x5af78e'
+    #     yellow:  '0xf4f99d'
+    #     blue:    '0xcaa9fa'
+    #     magenta: '0xff92d0'
+    #     cyan:    '0x9aedfe'
+    #     white:   '0xe6e6e6'
+    black:        '0x282c34'
+    white:        '0xabb2bf'
+    red:          '0xe06c75'
+    green:        '0x98c379'
+    yellow:       '0xd19a66'
+    blue:         '0x61afef'
+    magenta:      '0xc678dd'
+    cyan:         '0x56b6c2'
   
 
 bell:
-  animation: EaseOutExpo
   duration: 0
 
 # Background opacity
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity : 0.83
+background_opacity : 0.93
+  # background_opacity : 0.86
 
 # Mouse bindings
 #
