--- a/config/polybar/pwidgets/main.ini
+++ b/config/polybar/pwidgets/main.ini
@@ -134,7 +134,7 @@ font-3 = "Source Han Sans CN:size=12;2"
 font-4 = "Iosevka Nerd Font:bold:size=7;2"
 font-5 = "Iosevka Nerd Font:size=15;4"
 font-6 = "Iosevka Nerd Font:size=19;4"
-font-7 = "Iosevka Nerd Font:size=20;0"
+font-7 = "Iosevka Nerd Font:size=5;0"
 ;font for pulseaudio
 font-8 = "Iosevka Nerd Font:size=15;3"
 
@@ -151,7 +151,7 @@ inherit = bar/main
 bottom = False
 
 width = 100%
-height = 24
+height = 23
 
 background = ${color.my_bg}
 # background = ${color.trans}
@@ -175,8 +175,8 @@ enable-ipc = true
 fixed-center = true
 
 modules-left = space round-left-date date round-right-date space round-left-tem temperature round-right-tem space round-left-cpu CPU cpu cpu_bar round-right-cpu space round-left-ram RAM memory memory_bar round-right-ram small_space
-modules-center = small_space round-left dwm 2space_second title round-right
-modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space  round-left-purple 
+modules-center = small_space round-left dwm 2space_second title round-right small_space
+modules-right = small_space round-left-vol pulseaudio-prefix pulseaudio round-right-vol space round-left-wifi wireless-network round-right-wifi space round-left-fs fs round-right-fs space round-left-purple
 
 underline-size = 3
 overline-size = 4
@@ -694,7 +694,7 @@ format-font = 4
 
 label = %title%
 label-font = 4
-label-maxlen = 60
+label-maxlen = 80
 label-empty = Desktop
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -775,29 +775,52 @@ label-unmounted = Not Mounted
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+# [module/pulseaudio]
+# type = internal/pulseaudio
+# 
+# format-volume = <label-volume>
+# 
+# label-volume = %percentage:2%%
+# label-volume-font = 3
+# format-volume-background = ${color.my_pink}
+# # format-volume-overline = ${color.my_bg}
+# # format-volume-underline = ${color.my_bg}
+# 
+# format-muted = "MUTED"
+# format-muted-foreground = ${color.white}
+# # label-muted-overline   = ${color.my_bg}
+# # label-muted-underline   = ${color.my_bg}
+# format-muted-background = ${color.my_pink}
+# format-muted-font = 3
+# 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume = <label-volume>
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
-label-volume = %percentage:2%%
-label-volume-font = 3
-format-volume-background = ${color.my_pink}
-# format-volume-overline = ${color.my_bg}
-# format-volume-underline = ${color.my_bg}
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = false
 
-format-muted = "MUTED"
-format-muted-foreground = ${color.white}
-# label-muted-overline   = ${color.my_bg}
-# label-muted-underline   = ${color.my_bg}
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 20
+label-volume = %percentage%%
+label-volume-background = ${color.my_pink}
 format-muted-background = ${color.my_pink}
-format-muted-font = 3
+label-muted = MUTED
+label-muted-foreground = ${color.white}
+
+click-right = pulseaudio-ctl mute
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/pulseaudio-prefix]
 type = custom/text
-click-left = exec pulseaudio-ctl mute
-click-right = exec pulseaudio-ctl mute
+click-left = pulseaudio-ctl mute
+click-right = pulseaudio-ctl mute
 content = " "
 content-font = 3
 content-foreground = ${color.lime}
@@ -825,7 +848,7 @@ format-volume-background = ${color.my_pink}
 bar-volume-width = 10
 bar-volume-gradient = true
 
-bar-volume-indicator = ▶
+bar-dvolume-indicator = ▶
 bar-volume-indicator-foreground = ${color.white}
 bar-volume-indicator-font = 9
 
